<resources>
    <string name="app_name">Titan Spotify Controller</string>
    <string name="spotify_client_id">YOUR_SPOTIFY_CLIENT_ID</string>
    <string name="spotify_redirect_scheme">yourapp</string>
    <string name="spotify_redirect_host">callback</string>
    <string name="connect_spotify">Connect to Spotify</string>
    <string name="disconnect_spotify">Disconnect</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next_track">Next</string>
    <string name="previous_track">Previous</string>
    <string name="current_track">Current track:</string>
    <string name="not_connected">Not connected to Spotify</string>
    <string name="connecting">Connecting…</string>
    <string name="connected">Connected to Spotify</string>
    <string name="subscreen_status_waiting">Waiting for rear display…</string>
    <string name="subscreen_status_ready">Subscreen ready</string>
</resources>
